--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.list1 {
+  margin: 1rem;
+  background-color: rgb(16, 60, 109);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.list2 {
+  margin: 1rem;
+  background: #103c6d;
+}
+.App {
+  margin: 1rem;
+}
+.header {
+  margin: 10px;
+  text-align: center;
+  border: 3px solid darkgoldenrod;
+  border-radius: 0.5rem;
+  padding: 10px 0px;
 }
